fix: devel headerbar style being visible

--- a/data/style.css
+++ b/data/style.css
@@ -235,6 +235,10 @@ flowboxchild {
 	color: white;
 }
 
+.media-viewer .top-bar {
+	background-image: none;
+}
+
 .ttl-status-heading {
 	font-size: small;
 }
